[gd_scene load_steps=12 format=2]

[ext_resource path="res://Inimigo/InimigoRigid.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 1.5
height = 0.5

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
params_cull_mode = 1
params_grow = true
params_grow_amount = 0.1
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=4]
next_pass = SubResource( 3 )
params_diffuse_mode = 4
params_specular_mode = 3
albedo_color = Color( 0.870588, 0.0470588, 0.964706, 1 )
roughness = 0.5

[sub_resource type="SphereMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
params_cull_mode = 1
params_grow = true
params_grow_amount = 0.05
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=7]
next_pass = SubResource( 6 )

[sub_resource type="SphereMesh" id=8]
radius = 0.5
height = 1.0

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.0627451, 0.054902, 0.054902, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="BoxShape" id=10]
extents = Vector3( 2, 1.5, 3 )

[node name="InimigoRigid" type="RigidBody"]
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 2.06421, -0.162031 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1.952, -0.162031 )
mesh = SubResource( 2 )
material/0 = SubResource( 4 )

[node name="Globo" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, -0.388885, -0.0737115 )
mesh = SubResource( 5 )
material/0 = SubResource( 7 )

[node name="olho" type="MeshInstance" parent="MeshInstance/Globo"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.613035 )
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.25

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.23312, -0.339986 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 10 )

[node name="TempoPraAtacar" type="Timer" parent="."]

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.07861, -2.39999 )
light_color = Color( 0.937255, 0.894118, 0.894118, 1 )
light_specular = 0.51
omni_range = 2.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="TempoPraAtacar" to="." method="_on_TempoPraAtacar_timeout"]
